--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,34 @@
-.check{
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
+
+* {
+   margin: 0;
+   padding: 0;
+   box-sizing: border-box;
+}
+
+body {
+   font-family: "Inter", sans-serif;
+   background-color: #F9F9FF;
+}
+
+.check {
    border: 2px solid red;
+}
+
+.contain {
+   max-width: 1100px;
+   margin-inline: auto;
+}
+
+.heroButton {
+   background-color: rgba(255, 255, 255, 0.111);
+   border: 2px solid yellow;
+}
+
+.black {
+   color: #24272E;
+}
+
+.gray {
+   color: #667085;
 }
